# legends-launcher

./: README.md  package-lock.json  package.json
.github/workflows/: release-launcher.yml
packaging/: README.md
packaging/aur/: .SRCINFO  .gitignore  PKGBUILD
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: AvatarMP_Windowed.qbspatch
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/menu/: menu.css  menu.js
